--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Paths to secure drives -------------------------------------------------
-/paths/paths.R
-
 # General dataset and output files ---------------------------------------
 *.csv
 
@@ -8,6 +5,11 @@
 !output
 output/*
 !output/README.md
+
+# Content of the paths folder except the README --------------------------
+!paths
+paths/*
+!paths/README.md
 
 # Stata dataset and output files -----------------------------------------
 *.dta
@@ -55,9 +57,6 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
-
-# macOS desktop services store
-.DS_Store
 
 # Operating system generated files ---------------------------------------
 .DS_Store
